[package]
name = "dynamic-plugin"
version.workspace = true
edition = "2021"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "Write compile-time-checked, dynamically-loaded plugin libraries for your Rust software."
repository = "https://github.com/lilopkins/dynamic-plugins-rs"
license = "MIT"

[features]
host = ["dynamic-plugin-macros/host"]
client = ["dynamic-plugin-macros/client"]
debug-hashes = ["dynamic-plugin-macros/debug-hashes"]

[dependencies]
libloading = { version = "0.8.3" }
dynamic-plugin-macros = { version = "0.6.0", path = "dynamic-plugin-macros" }
thiserror = "2.0.11"
libc = "0.2.155"
sa = "2.0.0"

[workspace]
members = [
    "dynamic-plugin-macros",
    "example-plugin",
    "example-plugin-host",
]

[workspace.package]
version = "0.6.0"
