[package]
name = "dynamic-plugin-macros"
version.workspace = true
edition = "2021"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "Macros for dynamic-plugin"
repository = "https://github.com/lilopkins/dynamic-plugins-rs"
license = "MIT"
rust-version.workspace = true

[lib]
proc-macro = true

[features]
host = []
client = []
debug-hashes = []

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = { version = "2.0.64", features = ["full", "extra-traits"] }
